# fbpro98-profile

./: .prettierignore  ARCHITECTURE.md  README.md  STATUS.md  TEST_STATUS.md  TODO.md  pyproject.toml  pyrightconfig.json
specs/: fbpro98-prf.hexpat  fbpro_prf.hsl  prf.md
src/fbpro98_profile/: __init__.py  model.py  reader.py  schema.py  writer.py
tests/: test_profile_model.py  test_profile_reader.py  test_profile_writer.py
tests/data/: TST-DEF1-AUD.prf  TST-DEF1-PL.prf  TST-OFF1-AUD.prf  TST-OFF1-PL.prf
tests/data/stock_profiles/: DEF1.PRF  DEF2.PRF  OFF1.PRF  OFF2.PRF
